[package]
name = "from_env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
serde = "1.0.182"
serde_json = "1.0.104"


[dev-dependencies]
serde = { version = "1.0.182", features = ["derive"] }
